--- a/src/main/webapp/administrador/menuAdministrador.xhtml
+++ b/src/main/webapp/administrador/menuAdministrador.xhtml
@@ -90,7 +90,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemPalestrantes.png" /><a
-								href="montagemPalestrantes.xhtml">Palestrantes</a></li>
+								href="../dirigente/montagemPalestrante.xhtml">Palestrantes</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
