--- a/src/main/webapp/administrador/palestra.xhtml
+++ b/src/main/webapp/administrador/palestra.xhtml
@@ -54,6 +54,43 @@
 								href="usuario.xhtml">Usuários</a>
 						</li>
 					</ul></li>
+				<li><a><h:graphicImage library="imagens/menu"
+									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
+					<ul>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="ecc.png" /><a href="../dirigente/ecc.xhtml">ECC
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="fichas.png" /><a href="../dirigente/montagemFicha.xhtml">Fichas
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemEquipes.png" /><a href="circulo.xhtml">Equipes
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCasais.png" /><a
+								href="montagemEncontristas.xhtml">Encontristas</a>
+						</li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemPalestrantes.png" /><a
+								href="../dirigente/montagemPalestrante.xhtml">Palestrantes</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCirculos.png" /><a
+								href="montagemCirculos.xhtml">Círculos</a></li>
+
+					</ul>
+				</li>
 			</ul>
 		</div>
 		<div id="status" style="...">
@@ -106,7 +143,7 @@
 		<center>
 		<p:dataTable value="#{palestraBean.lista}" var="palestra"
 			rendered="#{!empty palestraBean.lista}" style="width:620px;">
-			<p:column headerText="Descrição" width="100">
+			<p:column headerText="Descrição" width="200">
 				<p:outputLabel value="#{palestra.descricao}"/>
 				<h:graphicImage library="imagens" name="casais.png" width="15" height="15" rendered="#{palestra.casal}"
 								style="float: right;" title="Casais"/>
