--- a/src/main/webapp/dirigente/ecc.xhtml
+++ b/src/main/webapp/dirigente/ecc.xhtml
@@ -87,7 +87,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemPalestrantes.png" /><a
-								href="montagemPalestrantes.xhtml">Palestrantes</a></li>
+								href="montagemPalestrante.xhtml">Palestrantes</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
@@ -373,7 +373,7 @@
 										 required="true"
 										 requiredMessage="Selecione o casal."
 										 style="width:435px" converter="fichaConverter"
-										 filter="true">
+										 filter="true" filterMatchMode="contains">
 							<f:selectItem itemLabel="Selecione o casal" noSelectionOption="true" />
 							<f:selectItems value="#{fichaBean.listaEncontristas}"
 										   var="casal" itemValue="#{casal}"
@@ -383,7 +383,8 @@
 						<p:selectOneMenu id="equipe" converter="equipeConverter"
 										 required="true"
 										 requiredMessage="Selecione a Equipe."
-										 value="#{eccBean.equipe}" style="width:280px">
+										 value="#{eccBean.equipe}" style="width:280px"
+										 filter="true" filterMatchMode="contains">
 							<f:selectItem itemLabel="Selecione a equipe" noSelectionOption="true" />
 							<f:selectItems value="#{equipeBean.listaDirigentes}"
 										   var="equipe" itemValue="#{equipe}"
