Montagem das Equipes

--- a/src/main/webapp/dirigente/menuDirigente.xhtml
+++ b/src/main/webapp/dirigente/menuDirigente.xhtml
@@ -80,7 +80,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="montagemEquipes.png" /><a href="../administrador/circulo.xhtml">Equipes
+											name="montagemEquipes.png" /><a href="../dirigente/montagemEquipe.xhtml">Equipes
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
