--- a/src/main/webapp/administrador/equipe.xhtml
+++ b/src/main/webapp/administrador/equipe.xhtml
@@ -70,7 +70,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="montagemEquipes.png" /><a href="circulo.xhtml">Equipes
+											name="montagemEquipes.png" /><a href="../dirigente/montagemEquipe.xhtml">Equipes
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
