--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -61,39 +61,6 @@
 						</ul>
 					</li>
 				</h:panelGroup>
-				<!--
-				<li>
-					<a><h:graphicImage library="imagens/menu"
-									   style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
-					<ul>
-						<li><h:graphicImage library="imagens/menu"
-											style="width:30px; height:30px;
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="circulos.png" /><a
-								href="../administrador/circulo.xhtml">Circulos</a>
-						</li>
-
-						<li><h:graphicImage library="imagens/menu"
-											style="width:30px; height:30px;
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="palestras.png" /><a
-								href="../administrador/palestra.xhtml">Palestras</a>
-						</li>
-						<li><h:graphicImage library="imagens/menu"
-											style="width:30px; height:30px;
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="equipes.png" /><a
-								href="../administrador/equipe.xhtml">Equipes</a>
-						</li>
-						<li><h:graphicImage library="imagens/menu"
-											style="width:30px; height:30px;
-								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="usuarios.png" /><a
-								href="usuario.xhtml">Usuários</a>
-						</li>
-					</ul>
-				</li>
-				-->
 				<li><a><h:graphicImage library="imagens/menu"
 									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
 					<ul>
@@ -114,7 +81,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemEquipes.png" />
-							<a href="circulo.xhtml">Equipes</a>
+							<a href="montagemEquipe.xhtml">Equipes</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
